fix: apply min-height to quotes block to prevent layout shift

--- a/src/blocks/Quotes/quotes.module.css
+++ b/src/blocks/Quotes/quotes.module.css
@@ -15,7 +15,7 @@
 
 .quotes-gallery {
   width: 100%;
-  height: 100%;
+  min-height: 650px;
   position: relative;
   display: flex;
   justify-content: flex-start;
